--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,13 @@ nav ul li {
     display: inline-block;
 }
 
+nav ul li a {
+    display: inline-block;
+    color: rgba(255, 255, 255, .5);
+    text-decoration: none;
+    padding: 0 35px;
+}
+
 nav ul {
     width: 1110px;
     margin: 0 auto;
