--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,62 @@ h1, h2 {
 
 .inner {
     width: 1110px;
-    background-color: gray;
     margin: 0 auto;
+}
+
+header {
+    height: 100px;
+    text-align: right;
+    position: relative;
+}
+
+header h1 {
+    position: absolute;
+    top: 7px;
+}
+
+header h1 img {
+    width: 280px;
+}
+
+header ul {
+    display: inline-block;
+    list-style: none;
+    padding: 22px 0;
+}
+
+header ul li {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+    line-height: 1.3;
+}
+
+header ul li:first-child {
+    margin-right: 20px;
+}
+
+header ul li h2 {
+    font-size: 13px;
+    font-weight: normal;
+    color: #6C757D;
+}
+header ul li p {
+    font-size: 32px;
+    font-weight: bold;
+    color: #6C757D;
+}
+
+header ul li a {
+    display: inline-block;
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none;
+    background-color: #6c757d;
+    height: 48px;
+    line-height: 48px;
+    padding: 0 15px;
+    border-radius: 5px;
 }
 
 nav {
