--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,12 @@ header ul li a {
     border-radius: 5px;
 }
 
+header ul li a:hover {
+    color: #fff;
+    background-color: #5a6268;
+    border-color: #545b62;
+}
+
 nav {
     background-color: #343A40;
     text-align: center;
@@ -88,6 +94,10 @@ nav ul li a {
     color: rgba(255, 255, 255, .5);
     text-decoration: none;
     padding: 0 35px;
+}
+
+nav ul li a:hover { 
+    color: rgba(255, 255, 255, .75)
 }
 
 nav ul {
